GMM: complete task-1

--- a/GMM/environment-setup/environment.yml
+++ b/GMM/environment-setup/environment.yml
@@ -18,3 +18,4 @@ dependencies:
     - ucimlrepo # Download sample datasets
     - openimages # week-1
     - scikit-image # week-1
+    - transformers # week-2
